tests/should_pass/minimal.sm
initial bar
final foo

bar -- keys [ q ] --> foo
