tests/should_fail/bad_range_y.sm
initial foo
final bar

# fail because 5 < 10
region (20 10 50 5)

foo -- keys [ a ] --> bar

foo --
  winc "foo"
--> pre
